--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,5 +25,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Send Report to Codacy
-        run: curl -LS -o codacy-coverage-reporter-assembly.jar "$(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')"
-java -jar codacy-coverage-reporter-assembly.jar report
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
