Configured hidden secret

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,5 +26,5 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: Send Report to Codacy
         env:
-          CODACY_PROJECT_TOKEN: "d90e9f42004740c6b76dd17079157400"
+          CODACY_PROJECT_TOKEN: ${{ dev.CODACY_PROJECT_TOKEN }}
         run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
