--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,12 +16,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+          
       - name: Build with Maven
         env:
           DISPLAY: ":0.0"
@@ -29,8 +31,19 @@ jobs:
 
   report:
     needs: build
+    
     runs-on: ubuntu-latest
+    
     steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up environment
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+          
       - name: Send Report to Codacy
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
