Tried configure xvfb

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,9 +25,11 @@ jobs:
           cache: maven
           
       - name: Build with Maven
+        uses: GabrielBB/xvfb-action@v1
         env:
           DISPLAY: ":0.0"
-        run: mvn -B package --file pom.xml
+        with:
+          run: mvn -B package --file pom.xml
         
       - name: Send Report to Codacy
         env:
